test/conformance/chainsaw/generate-validating-admission-policy/validatingpolicy/with-finegrained-exception/exception.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: PolicyException
metadata:
  name: allow-specific-values
spec:
  policyRefs:
    - name: allow-specific-values
      kind: ValidatingPolicy
  # list of image names to exclude
  images:
  - public.ecr.aws/docker/library/busybox:latest
  - nginx:latest
  # list of values to allow
  allowedValues:
  - FOO
  - BAR
