test/conformance/chainsaw/generate-validating-admission-policy/validatingpolicy/with-finegrained-exception/validatingadmissionpolicybinding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: vpol-allow-specific-values-binding
  ownerReferences:
  - apiVersion: policies.kyverno.io/v1beta1
    kind: ValidatingPolicy
    name: allow-specific-values
spec:
  policyName: vpol-allow-specific-values
  validationActions:
  - Deny
